fix(processing): Correct timestamp parsing and simplify RabbitMQ config